Html de la deuxieme section

--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
             <p>Des formations pour tous les niveaux qui te forment aux métiers d’aujourd’hui et de demain, auprès d’instructeurs expérimentés.</p>
             <a href="#" >En savoir plus</button>
         </section>
+        <section>
+            <h2>Rejoins la formation qui correspond à tes besoins</h2>
+            <p>Que tu souhaites t’initier à un domaine, accélérer ta carrière avec une certification internationale, ou changer de carrière, nous avons la formation faite pour toi.</p>
+        </section>
     </main>
     
     <footer>
